# local-workspace

./: .claude_profile.md  .editorconfig  .env.example  .gitignore  AI_PROFILE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  agent.md  check_skills.py  check_skills_regex.py  cline-provider.md  pyproject.toml  start.sh  stop.sh  update_docs.py  update_names.py  update_profile_name.py  update_user_manual.py  watchdog.sh
.github/: PULL_REQUEST_TEMPLATE.md
openclaw-sandbox/: AGENTS.md  CHANGELOG.md  HEARTBEAT.md  IDENTITY.md  INDEX.md  SOUL.md  TOOLS.md  USER.md  bot_config.json  fix_dashboard_files.py  fix_encoding.py  fix_manifests.py  fix_proofreader_state.py  fix_state.py  patch_test.py  pyproject.toml  refactor_atomic.py  refactor_imports.py  reset_and_run_proofreader.py  test_status.py  update_docs.py
openclaw-sandbox/.openclaw/: workspace-state.json
openclaw-sandbox/core/: __init__.py
openclaw-sandbox/core/ai/: graph_store.py  hybrid_retriever.py  knowledge_pusher.py  llm_client.py  semantic_matcher.py
openclaw-sandbox/core/cli/: check_status.py  cli.py  cli_config_wizard.py  cli_menu.py  cli_runner.py
openclaw-sandbox/core/config/: global.yaml  inbox_config.json
openclaw-sandbox/core/orchestration/: event_bus.py  human_gate.py  pipeline_base.py  router_agent.py  run_all_pipelines.py  scheduler.py  session_manifest.py  skill_registry.py  task_queue.py
openclaw-sandbox/core/scripts/: idea_reminder.py  recover_state_from_logs.py
openclaw-sandbox/core/services/: hitl_manager.py  inbox_daemon.py  scheduler.py  security_manager.py  sm2.py  telegram_bot.py
openclaw-sandbox/core/state/: global_registry.py  memory_updater.py  pipeline_state_schema.py  resume_manager.py  session_state.py  state_backend.py  state_manager.py
openclaw-sandbox/core/utils/: atomic_writer.py  bootstrap.py  data_layout.py  diff_engine.py  file_stability.py  file_utils.py  glossary_manager.py  log_manager.py  playwright_utils.py  subject_manager.py  workspace.py
openclaw-sandbox/docs/: ARCHITECTURE.md  MODEL_SELECTION.md
openclaw-sandbox/memory/: DECISIONS.md
openclaw-sandbox/memory/sessions/: 2026-05-07_e41d68c5.md  2026-05-15_bddec571.md  2026-05-29_32729395.md
openclaw-sandbox/ops/: bootstrap.sh  check.sh  cleanup_orphans.py  fix_checklist.py  fix_filenames.py  mass_rename.py  restore_pipeline.py  update_skill_cli_titles.py  update_skill_md.py
openclaw-sandbox/scratch/: inspect_graph.py  rerun_all.sh  test_hybrid.py  test_routing.py
openclaw-sandbox/scripts/: simulate_routing.py
openclaw-sandbox/skills/: SKILL.md
openclaw-sandbox/skills/academic_edu_assistant/: SKILL.md  manifest.py
openclaw-sandbox/skills/academic_edu_assistant/docs/: ARCHITECTURE.md  PROJECT_RULES.md  SKILL_RULE.md
openclaw-sandbox/skills/academic_edu_assistant/scripts/: run_all.py
openclaw-sandbox/skills/academic_library_agent/: SKILL.md  manifest.py
openclaw-sandbox/skills/academic_library_agent/config/: config.yaml
openclaw-sandbox/skills/academic_library_agent/docs/: ARCHITECTURE.md
openclaw-sandbox/skills/academic_library_agent/scripts/: run_all.py
openclaw-sandbox/skills/audio_transcriber/: SKILL.md  manifest.py
openclaw-sandbox/skills/audio_transcriber/config/: config.yaml  prompt.md
openclaw-sandbox/skills/audio_transcriber/docs/: ARCHITECTURE.md  PROJECT_RULES.md  SKILL_RULE.md
openclaw-sandbox/skills/audio_transcriber/scripts/: backfill_lang.py  reset_files.py  run_all.py
openclaw-sandbox/skills/doc_parser/: SKILL.md  manifest.py
openclaw-sandbox/skills/doc_parser/config/: config.yaml  selectors.yaml
openclaw-sandbox/skills/doc_parser/docs/: ARCHITECTURE.md  DECISIONS.md  PROJECT_RULES.md  SKILL_RULE.md
openclaw-sandbox/skills/doc_parser/scripts/: clean_missing_files.py  run_all.py
openclaw-sandbox/skills/feynman_simulator/: SKILL.md  manifest.py
openclaw-sandbox/skills/feynman_simulator/config/: config.yaml
openclaw-sandbox/skills/feynman_simulator/scripts/: run_all.py
openclaw-sandbox/skills/gemini_verifier_agent/: SKILL.md  manifest.py
openclaw-sandbox/skills/gemini_verifier_agent/config/: config.yaml
openclaw-sandbox/skills/gemini_verifier_agent/docs/: ARCHITECTURE.md
openclaw-sandbox/skills/gemini_verifier_agent/scripts/: run_all.py
openclaw-sandbox/skills/inbox_manager/: SKILL.md  manifest.py
openclaw-sandbox/skills/inbox_manager/docs/: ARCHITECTURE.md  SKILL_RULE.md
openclaw-sandbox/skills/inbox_manager/scripts/: query.py
openclaw-sandbox/skills/interactive_reader/: SKILL.md  manifest.py
openclaw-sandbox/skills/interactive_reader/docs/: ARCHITECTURE.md  DECISIONS.md  SKILL_RULE.md
openclaw-sandbox/skills/interactive_reader/scripts/: run_all.py
openclaw-sandbox/skills/knowledge_compiler/: SKILL.md  manifest.py
openclaw-sandbox/skills/knowledge_compiler/config/: config.yaml  prompt.md
openclaw-sandbox/skills/knowledge_compiler/docs/: ARCHITECTURE.md  DECISIONS.md  PROJECT_RULES.md  SKILL_RULE.md
openclaw-sandbox/skills/knowledge_compiler/scripts/: run_all.py
openclaw-sandbox/skills/note_generator/: SKILL.md  manifest.py
openclaw-sandbox/skills/note_generator/config/: config.yaml
openclaw-sandbox/skills/note_generator/docs/: PROJECT_RULES.md  SKILL_RULE.md
openclaw-sandbox/skills/note_generator/scripts/: run_all.py  synthesize.py
openclaw-sandbox/skills/proofreader/: SKILL.md
openclaw-sandbox/skills/smart_highlighter/: SKILL.md  manifest.py
openclaw-sandbox/skills/student_researcher/: SKILL.md  manifest.py
openclaw-sandbox/skills/telegram_kb_agent/: SKILL.md  manifest.py
openclaw-sandbox/skills/video_ingester/: SKILL.md  manifest.py
openclaw-sandbox/state/: graph.gpickle
openclaw-sandbox/tests/: conftest.py  test_atomic_writer.py  test_cli.py  test_inbox_daemon.py  test_resume_manager.py  test_run_all_pipelines.py  test_task_queue.py  test_vad_preprocess.py
openclaw-sandbox/tests/e2e/: test_e2e_pipeline.py  test_pipeline_e2e.py
openclaw-sandbox/tests/eval/: conftest.py  test_proofread_quality.py
openclaw-sandbox/tests/integration/: test_integration_router.py  test_vlm_integration.py
(+676 files in other folders)
